# Metaphors

./: .dockerignore  .env.example  .gitignore  BRAINSTORM.md  CONTRIBUTING.md  Dockerfile  GOAL.md  LICENSE  Makefile  PO_DECISIONS.md  README.md  VISUAL_GUIDELINES.md  docker-compose.yml  install.sh  pyproject.toml  server.py
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  metaphor_request.md
.github/workflows/: ci.yml
api/: __init__.py  routes.py
docs/: custom-data-source.md  custom-metaphor.md
engine/: __init__.py  entities.py  scheduler.py
engine/metaphors/: __init__.py  base.py  city.py  construction.py  factory.py  garden.py  kitchen.py  orchestra.py  ship.py  solar.py  space.py  traffic_light.py
engine/sources/: __init__.py  base.py  docker.py  mock.py  processes.py  prometheus.py
mobile/: app.json
mobile/app/: _layout.tsx  about.tsx
scripts/: audit_all.py  kanban_worker.py  screenshot.py  screenshot_3d.py  update.py
static/: city3d.js  index.html  main.js  space3d.js  style.css  three-app.js
static/3d/: index.html  main3d.js
static/3d/metaphors/: base.js  city.js  forest.js  garden.js  solar.js  space.js  traffic_light.js
tests/: test_city.py  test_construction.py  test_detail_panel.py  test_docker_source.py  test_entities.py  test_factory.py  test_garden.py  test_install.py  test_integration.py  test_kitchen.py  test_metaphors.py  test_orchestra.py  test_processes_source.py  test_prometheus_source.py  test_server_api.py  test_ship.py  test_solar.py  test_sources.py  test_space.py  test_traffic_light.py  test_ws_stream.py  verify_traffic_light.py
