[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "metaphors"
version = "0.1.0"
description = "Infrastructure visualizer with interchangeable metaphors"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Metaphors Contributors"}
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "psutil>=5.9.0",
]

[project.urls]
Homepage = "https://github.com/metaphors/metaphors"
Repository = "https://github.com/metaphors/metaphors"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools]
packages = ["engine", "tests"]
